<?xml version="1.0"?>
<package format="2">
  <name>package_name</name>
  <version>0.0.0</version>
  <description>The package_name package</description>


  <maintainer email="maintainer1@rios.ai">Maintainer1</maintainer>
  <maintainer email="maintainer2@rios.ai">Maintainer2</maintainer>

  <license>RIOS Proprietary</license>

  <author email="jane.doe@example.com">Jane Doe</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend> roscpp</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
